[package]
name = "pallet-validator-set"
version = "2.0.0"
authors = ["gautamdhameja"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'system/std',
    'serde',
    'session/std'
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-session'
version = '2.0.0-alpha.6'
